Closed Bug 1136410 Opened 10 years ago Closed 8 years ago

WebGL 1.0.3 conformance error: conformance/attribs/gl-bindAttribLocation-aliasing.html

Categories

(Core :: Graphics: CanvasWebGL, defect)

39 Branch
x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla50
Tracking Status
firefox50 --- fixed

People

(Reporter: lukebenes, Assigned: kyle_fung)

References

(Blocks 1 open bug)

Details

(Whiteboard: webgl-conformance gfx-noted)

Attachments

(2 files, 1 obsolete file)

User Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:39.0) Gecko/20100101 Firefox/39.0 Build ID: 20150224030228 Steps to reproduce: https://www.khronos.org/registry/webgl/sdk/tests/conformance/attribs/gl-bindAttribLocation-aliasing.html?webglVersion=1 Actual results: Only 17 of 273 passed Expected results: Chrome passes all the tests. Firefox fails the test with both the ANGLE and OpenGL backends.
Component: Untriaged → Canvas: WebGL
Product: Firefox → Core
Whiteboard: webgl-conformance → webgl-conformance gfx-noted
Summary: WebGL conformance error: conformance/attribs/gl-bindAttribLocation-aliasing.html → WebGL 1.0.3 conformance error: conformance/attribs/gl-bindAttribLocation-aliasing.html
No longer blocks: webgl-1.0.2
Link in 1.0.4 beta suite: - https://www.khronos.org/registry/webgl/sdk/tests/conformance/attribs/gl-bindAttribLocation-aliasing.html?webglVersion=1 Tested to fail on the following configurations: - GIADA, MACBOOK_AIR_WIN, MACBOOK_PRO_WIN, NEXUS-10, SURFACE, WINDBOX, HASWELL, HPOMEN Did not fail on the following configurations: - SPARK, MACBOOK_AIR_OSX, MACBOOK_PRO_OSX, MACMINI, MACPRO, NEXUS-4, NEXUS-5 See https://bugzilla.mozilla.org/show_bug.cgi?id=1178601 for hardware configuration details of these systems.
Assignee: nobody → kfung
Attached file link-test-case.html
Reduced test case. Needs to be run inside the WebGL conformance test suite.
Attached patch dup-index-check.patch (obsolete) — Splinter Review
Failures coming from allowing linking if there are multiple attributes bound to the same index. Added a check inside WebGLProgram::LinkProgram() for such duplicates and caused link failure if one is found.
Attachment #8646032 - Flags: review?(jgilbert)
It looks like fixing Bug 1136411 will fix this problem, but fixing this bug will not fix Bug 1136411.
Depends on: 1136411
Attachment #8646032 - Flags: review?(jgilbert)
Attachment #8646032 - Attachment is obsolete: true
Blocks: 1193526
No longer blocks: 1193526
Still failing on Intel HD 4000 under Ubuntu 16.04 50.0a1 (2016-06-25)
OS: Windows 7 → Linux
Try's green.
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla50
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: