Bug 1136410 - Forbid attrib aliasing. - r=mtseng'

MozReview-Commit-ID: 6shjIyJQQ6V